# claude-code-study

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
docs/: AI-Agent产品差异分析.md  README.md  agent_study.md  development-workflow-design.md
docs/superpowers/plans/: 2026-03-19-development-workflow-setup.md  2026-03-20-hello-claude-cli.md  2026-03-25-hungarian-algorithm.md  2026-03-27-pr-miou-metrics.md
docs/superpowers/specs/: 2025-03-27-pr-miou-metrics-design.md  2026-03-20-hello-claude-cli-design.md  2026-03-25-hungarian-algorithm-design.md  2026-03-27-pr-miou-metrics-design.md
docs/topics/.templates/: README.md  example.py  notes.md
docs/topics/01-basics/: README.md  notes.md
docs/topics/01-basics/examples/: hello_claude.py
docs/topics/01-basics/practice/hello-world/: README.md
docs/topics/02-agents-and-tasks/: README.md  notes.md
docs/topics/02-agents-and-tasks/examples/: example1-parallel-agents.py  example2-explore-agent.py  example3-plan-agent.py
docs/topics/03-skills-system/: README.md  notes.md
docs/topics/03-skills-system/codes/: example.py  hungarian_algorithm.py  test_hungarian_algorithm.py
docs/topics/03-skills-system/codes_1/: .coverage  README.md  metrics.py
docs/topics/03-skills-system/codes_1/tests/: __init__.py  (+1 more)
docs/topics/03-skills-system/examples/: interactive-skill.md  parameterized-skill.md  simple-skill.md
docs/workflows/: claude-code-best-practices.md  development-workflow.md  git-workflow.md
src/: text_analyzer.py
tests/: test_text_analyzer.py
tools/: check-links.py
(+6 files in other folders)
